--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,4 +1,4 @@
-i {
+.cell i {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
